# ccbell

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: test.yml
ccbell/: __init__.py  __main__.py  config.py  dispatcher.py  enrich.py  logger.py  notify.py  summary.py
ccbell/backends/: bark.py  base.py  ntfy.py
docs/: DESIGN.md
hooks/: dispatch.py
scripts/: _patch_settings.py  _uninstall_settings.py  check_secrets.py  install.ps1  install.sh  pre-commit  push_via_dulwich.py  uninstall.ps1  uninstall.sh
tests/: test_backends_bark.py  test_backends_ntfy.py  test_check_secrets.py  test_config.py  test_dispatcher.py  test_notify.py  test_patch_settings.py  test_summary.py
tests/fixtures/: sample_stop_payload.json  sample_transcript_alt_schema.jsonl  sample_transcript_basic.jsonl  sample_transcript_malformed.jsonl
