[project]
name = "ccbell"
version = "0.2.1"
description = "Minimal Claude Code → iPhone notifier (Bark)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ccbell contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = []

[project.scripts]
ccbell = "ccbell.notify:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ccbell*"]
