[project]
name = "ccbell"
version = "0.2.3"
description = "跨设备 Claude Code → iPhone 桌面推送工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "PhilharmyWang" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]
dependencies = []
keywords = ["claude-code", "bark", "notification", "ios", "hooks"]

[project.scripts]
ccbell = "ccbell.notify:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ccbell*"]
